--- a/test1/mainwindow.ui
+++ b/test1/mainwindow.ui
@@ -6,19 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>537</width>
+    <height>512</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>537</width>
+    <height>512</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>537</width>
+    <height>560</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frameSettings">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>50</y>
+      <x>30</x>
+      <y>20</y>
       <width>171</width>
       <height>151</height>
      </rect>
@@ -98,10 +113,10 @@
    <widget class="QFrame" name="frameASCII">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>220</x>
       <y>20</y>
-      <width>281</width>
-      <height>241</height>
+      <width>291</width>
+      <height>191</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -130,20 +145,23 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>41</y>
-       <width>241</width>
-       <height>181</height>
+       <y>30</y>
+       <width>251</width>
+       <height>141</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 12pt &quot;Segoe UI&quot;;</string>
      </property>
     </widget>
    </widget>
    <widget class="QFrame" name="frameResult">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>310</y>
-      <width>521</width>
-      <height>221</height>
+      <x>30</x>
+      <y>220</y>
+      <width>481</width>
+      <height>211</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -172,12 +190,51 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>40</y>
-       <width>481</width>
-       <height>151</height>
+       <y>30</y>
+       <width>441</width>
+       <height>161</height>
       </rect>
      </property>
     </widget>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>440</y>
+      <width>331</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 170, 255);</string>
+    </property>
+    <property name="html">
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9.75pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>440</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 170, 255);</string>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt; Файл с данными сохранен:&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
